feat: v0.0.15 — Panama FFI, multi-size benchmarks, versioning fixes
Panama FFI (java-panama):
- Fix Huff0Panama and FsePanama to use Java 21 stable Foreign API
  (arena.allocate + copyFrom/toArray instead of deprecated allocateArray/copyTo)
- Compile Panama sources via build-helper-maven-plugin alongside JNI
- Add Panama tests: PanamaTests.java for huff0 and fse (3 tests each)
- Add --enable-native-access=ALL-UNNAMED to Surefire argLine
- Upgrade Maven compiler to Java 21

Benchmarks:
- native bench_codecs.c: multi-size (512B–16MB) x 2 data types (LOW/MEDIUM entropy)
- JMH CodeBench: @Param sizes + data types + Panama benchmark methods
- .NET CodecBenchmarks: [Params] sizes + data types; fix Main to use BenchmarkSwitcher
  so --job/--exporters/--artifacts CLI args are properly handled
- Completely rewrote generate_dashboard.py for parameterized output:
  globs BDN results/*.json; handles JMH params; per-size Markdown tables

Versioning:
- pom.xml version updated to 0.0.15
- rc.yaml and release.yaml pass version from tag to Maven (mvn versions:set)
- Find shaded JAR step uses head -1 to avoid multi-line output issues

Workflow fixes:
- rc.yaml bench: artifact name fixed to native-linux-x64- (was native-linux-)
- Both workflows: --enable-native-access=ALL-UNNAMED in JMH bench step
- Both workflows: BDN --job short for faster CI benchmarks
- rc.yaml: now generates and uploads performance_dashboard.md
- .gitignore: add java-panama/native/ (local build outputs)

Documentation:
- README: Panama section updated — no longer hypothetical, shows real API
- README: Components table updated with Panama FFI entries
- README: Architecture section shows Panama as working alternative with actual code

Specs:
- Create specs/v0.0.15_spec.md with implementation checklist
- Create specs/v0.0.16_req.md and v0.0.16_spec.md (Maven Central + NuGet roadmap)

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>